--- a/productspage-light-conditioner.html
+++ b/productspage-light-conditioner.html
@@ -36,11 +36,11 @@
     <div class="golden-line"></div> 
 
     <div class="banner">
-        <h1>OUR CONDITIONER COLLECTION</h1>
+        <h1>OUR ULTRA CONDITIONER COLLECTION</h1>
     </div>
 
     <div class="content">
-        <img src="assets/images/Cream silk_ConditionerProducts_Banner.webp" alt="Conditioner Collection">
+        <img src="assets/images/Cream silk_UltraConditionerProducts_Banner.jpg" alt="Conditioner Collection">
     </div>
 
     <div class="golden-section"></div>
@@ -48,8 +48,8 @@
     <div class="products-section">
         <div class="products">
             <div class="product-card">
-                <a href="products-subpages/lightcond-prod1.html" style="text-decoration: none;">
-                    <img class="product-image-default" src="assets/images/cream silk ultimate reborn standout straight product.webp" alt="Product 1">
+                <a href="products-subpages/ultracond-prod1.html" style="text-decoration: none;">
+                    <img class="product-image-default" src="assets/images/cream silk triple keratin rescue hair fall defiance ultra conditioner.jpg" alt="Product 1">
                     <img class="product-image-hover" src="assets/images/Heart evangelista hover pic_products conditioner.jpg" alt="Product 1 Hover">
                     <h3>Cream Silk Hydra Fresh and Bouncy</h3>
                 </a>
@@ -60,15 +60,15 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
-                <a href="products-subpages/lightcond-prod1.html"><button>BUY NOW</button></a>
+                <a href="products-subpages/ultracond-prod1.html"><button>BUY NOW</button></a>
             </div>
     
             <div class="product-card">
-                <a href="products-subpages/lightcond-prod2.html" style="text-decoration: none;">
-                    <img class="product-image-default" src="assets/images/cream silk ultimate reborn dry damage control product.png" alt="Product 2">
+                <a href="products-subpages/ultracond-prod2.html" style="text-decoration: none;">
+                    <img class="product-image-default" src="assets/images/cream silk triple keratin rescue conditioner ultimate color revive.jpg" alt="Product 2">
                     <img class="product-image-hover" src="assets/images/Catriona Gray hover pic_products.jpg" alt="Product 2 Hover">
-                    <h3>Cream Silk Hydra Fresh and Hydrated</h3>                   
-                </a>  
+                    <h3>Cream Silk Hydra Fresh and Hydrated</h3>
+                </a>
                 <div class="stars">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -76,8 +76,10 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
-                <a href="products-subpages/lightcond-prod2.html"><button>BUY NOW</button></a>
+                <a href="products-subpages/ultracond-prod2.html"><button>BUY NOW</button></a> 
             </div>
+            </div>
+        </div>
     
     <div class="golden-section"></div>
 
@@ -96,36 +98,34 @@
         <div class="sitemap">
             <h3>NAVIGATION</h3>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="productspage-conditioner.html">Products</a></li>
-                <li><a href="about-us-page.html">About Us</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
             </ul>
         </div>
         <div class="join-pack">
                 <h3>JOIN THE PACK!</h3>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/creamsilkph/"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/creamsilkph/?hl=en"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.youtube.com/user/CreamSilkPhil"><i class="fab fa-youtube"></i></a>
-                    <a href="https://x.com/creamsilkph?lang=en"><i class="fas fa-times"></i></a>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fas fa-times"></i>
                 </div>
                 <hr class="golden-line">
                 <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                <form id="sign-up">
-                <input type="email" placeholder="Email Address" required>
-                <button>SIGN UP</button>                   
-                </form>
+                <input type="email" placeholder="Email Address">
+                <button>SIGN UP</button>
             </div>
     </div>
 
     <div class="golden-line-footer"></div> 
     <div class="bottom">
         <p>©2024 Unilever. All rights reserved.</p>
-        <a href="https://www.unilevernotices.com/privacy-notices/philippines-english.html">Privacy Notice</a> |
-        <a href="https://www.hul.co.in/legal/">Legal</a> |
-        <a href="https://www.unilevernotices.com/cookie-notices/philippines-english.html">Cookie Notice</a> |
+        <a href="#">Privacy Notice</a> |
+        <a href="#">Legal</a> |
+        <a href="#">Cookie Notice</a> |
         <a href="#">Navigation</a> |
-        <a href="https://notices.unilever.com/en/">Accessibility</a>
+        <a href="#">Accessibility</a>
     </div>
 </footer>
 
