--- a/productspage-ultra-cond.html
+++ b/productspage-ultra-cond.html
@@ -97,7 +97,7 @@
             </div>
     
             <div class="product-card">
-                <a href="ultracond-prod4.html" style="text-decoration: none;">
+                <a href="products-subpages/ultracond-prod4.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/CREAM SILK ULTIMATE STRAIGHT.jpg" alt="Product 4">
                     <img class="product-image-hover" src="assets/images/Pia Wurtzbach hover pic_products.jpg" alt="Product 4 Hover">      
                     <h3>Cream Silk Ultimate Straight Conditioner</h3>
