--- a/products-subpages/lightcond-prod2.html
+++ b/products-subpages/lightcond-prod2.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href=".//assets/css/single-products-style.css" />
+    <link rel="stylesheet" href="../assets/css/single-products-style.css" />
   </head>
 
   <body>
@@ -94,7 +94,7 @@
     </div>
 
     
-    <a href="../productspage-ultra-cond.html" class="back-icon">
+    <a href="../productspage-light-conditioner.html" class="back-icon">
         <i class="fas fa-arrow-circle-left"></i> Back to Products Page
       </a>
 
