--- a/products-subpages/ultracond-prod1.html
+++ b/products-subpages/ultracond-prod1.html
@@ -102,12 +102,12 @@
 
     <div class="golden-section"></div>
 
-      <footer class="footer">
-      <div class="container-foot">
+    <footer class="footer">
+      <div class="container">
           <div class="shop-now">
               <h3>SHOP NOW AT</h3>
-              <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/">
-                <img src="../assets/images/Lazada logo.png" alt="Lazada"></a>
+              <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="../assets/images/Lazada logo.png"
+                  alt="Lazada"></a>
               <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img
                   src="../assets/images/Shopee logo.png" alt="Shopee"></a>
               <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img
@@ -125,15 +125,17 @@
           <div class="join-pack">
                   <h3>JOIN THE PACK!</h3>
                   <div class="social-icons">
-                      <i class="fab fa-facebook-f"></i>
-                      <i class="fab fa-instagram"></i>
-                      <i class="fab fa-youtube"></i>
-                      <i class="fas fa-times"></i>
+                      <a href="https://www.facebook.com/creamsilkph/"><i class="fab fa-facebook-f"></i></a>
+                      <a href="https://www.instagram.com/creamsilkph/?hl=en"><i class="fab fa-instagram"></i></a>
+                      <a href="https://www.youtube.com/user/CreamSilkPhil"><i class="fab fa-youtube"></i></a>
+                      <a href="https://x.com/creamsilkph?lang=en"><i class="fas fa-times"></i></a>
                   </div>
                   <hr class="golden-line">
                   <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                  <input type="email" placeholder="Email Address">
-                  <button>SIGN UP</button>
+                  <form id="sign-up">
+                  <input type="email" placeholder="Email Address" required>
+                  <button>SIGN UP</button>                   
+                  </form>
               </div>
       </div>
   
