--- a/about-us-page.html
+++ b/about-us-page.html
@@ -51,7 +51,7 @@
 
     <section class="nothing-content-section">
         <div class="nothing-text-container">
-            <h2>NOTHING CONDITIONS LIKE CREAMSILK</h2>
+            <h2>NOTHING CONDITIONS LIKE CREAMSILK</h2> <br>
             <p>Creamsilk Philippines, the country’s most trusted conditioner brand, brings to Filipinas superior conditioning at its core by offering a wide array of conditioners for shiny hair.</p>
         </div>
         <div class="nothing-image-container">
@@ -61,7 +61,7 @@
 
     <section class="history-content-section">
         <div class="history-text-container">
-            <h2>OUR HISTORY</h2>
+            <h2>OUR HISTORY</h2> <br>
             <p>Creamsilk is manufactured by Unilever Philippines, and has been at the forefront of developing the conditioner market in the Philippines since 1984, providing expert solutions with specially formulated ingredients to address women’s unique hair needs. It expanded its product line in 2002 by introducing leave-on conditioners and treatment in 2007.</p>
             <p>With 30 years of experience in hair care, Creamsilk is the expert in Filipina hair, using the most superior technology used as a market benchmark. Because shampoos alone can strip hair of its natural moisture, Creamsilk conditioners moisturize hair and condition it like no other.</p>
         </div>
